FIxed the size of overflowed content

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
     font-family: 'Noto Sans JP';
     font-weight: 400;
     margin: 20px auto 0 auto;
+    overflow-wrap: anywhere;
+    word-break: normal;
+    line-break: strict;
 }
 
 a {
@@ -17,6 +20,7 @@ a {
 h1 {
     border-bottom: 1px solid #d8d8d8;
     font-weight: normal;
+    font-size: 28px;
 }
 h1 span {
     border-bottom: 5px solid #007B8F;
@@ -68,6 +72,9 @@ h1 span {
 }
 .header_info div {
     font-size: 17px;
+}
+.header_info div a {
+    margin: 0 0 0 5px;
 }
 .header_inquiry {
     background: #8FE388;
@@ -200,11 +207,9 @@ h1 span {
 /* main */
 .main {
     padding: 20px;
-    padding-bottom: 250px;
     font-weight: 400;
     line-height: 1.6;
     max-width: 1050px;
-    width: 100%;
     margin: 0 auto;
 }
 .main img {
